--- a/core/app/assets/stylesheets/bubble/tabs.css.less
+++ b/core/app/assets/stylesheets/bubble/tabs.css.less
@@ -198,7 +198,7 @@
       }
 
       .wrapper {
-        padding: 12px 12px 0 12px;
+        padding: 12px;
         background: #fff;
         border-top: 1px solid @baseBorderColor;
       }
