--- a/core/app/assets/stylesheets/bubble/variables.less
+++ b/core/app/assets/stylesheets/bubble/variables.less
@@ -1,3 +1,9 @@
 @transition: opacity 0.2s ease;
 @max-z-index  : 2147483647;
+
 @popup-padding: 10px;
+
+@popup-padding-top:     10px;
+@popup-padding-bottom:  0px;
+@popup-padding-left:    10px;
+@popup-padding-right:   10px;
